# plugin

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: Oscilloscope.cpp  Oscilloscope.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
